--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -6,7 +6,7 @@ body #wall #tag-2 {
   display: none;
 }
 
-body div#wall #tag-3.slick {
+body #wall #tag-3.slick {
   display: none;
 }
 
@@ -14,11 +14,11 @@ body div#wall #tag-3.slick {
   display: none;
 }
 
-div#wall .parent + .parent #tag-5.slick {
+#wall .parent + .parent #tag-5.slick {
   display: none;
 }
 
-body div#wall div.parent div:last-child div#tag-6 {
+body #wall div.parent div:last-child #tag-6 {
   display: none;
 }
 
